--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,16 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="inner_links">
+  <nav>
+    <%= link_to 'All Books', books_path %>
+    <%= link_to 'New Book', new_book_path %>
+    |
+    <%= link_to 'All Authors', authors_path %>
+    <%= link_to 'New Author', new_author_path %>
+  </nav>
+</div>
 
 <% if @current_user.present? %>
   Welcome back <%= @current_user.email %>
 <% end %>
+
+<h1>Welcome to your personal library</h1>
+<!-- <p>Find me in app/views/pages/home.html.erb</p> -->
