--- a/app/views/authors/_form.html.erb
+++ b/app/views/authors/_form.html.erb
@@ -1,7 +1,9 @@
-<%= form_for @artist do |f| %>
+<%= form_for @author do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name, :autofocus => true %>
 
   <%= f.label :nationality %>
   <%= f.text_field :nationality %>
+
+  <%= f.submit %>
 <% end %>
