--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,3 +1,13 @@
+<div class="inner_links">
+  <nav>
+    <%= link_to 'All Books', books_path %>
+    <%= link_to 'New Book', new_book_path %>
+    |
+    <%= link_to 'All Authors', authors_path %>
+    <%= link_to 'New Author', new_author_path %>
+  </nav>
+</div>
+
 <h1><%= @book.title %></h1>
 
 <ul>
