--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -15,7 +15,7 @@
 <% @books.each do |book| %>
   <ul>
     <li><%= link_to book.title, book %></li>
-    <li><%= book.year %><li>
-    <li><%= book.author_id %></li>
+    <!-- <li><%= book.year %><li>
+    <li><%= book.author_id %></li> -->
   </ul>
 <% end %>
